// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MapDetailAdressenLigplaats should render \`Nee\` if aanduiding in onderzoek is \`false\` and show a red bullet 1`] = `
<MapDetailResultWrapper
  onMaximize={[MockFunction]}
  onPanoPreviewClick={[MockFunction]}
  panoUrl="panoUrl"
  subTitle="Ligplaats label"
  title="Adres (ligplaats)"
>
  <ul
    className="map-detail-result__list"
  >
    <li
      className="map-detail-result__notification"
    >
      <Notification
        canClose={false}
        className=""
        level="alert"
      >
        Indicatie geconstateerd
      </Notification>
    </li>
    <MapDetailResultStatusItem
      label="Indicatie geconstateerd"
      status="alert"
      value="Ja"
    />
    <MapDetailResultStatusItem
      label="Aanduiding in onderzoek"
      status=""
      value="Nee"
    />
  </ul>
</MapDetailResultWrapper>
`;

exports[`MapDetailAdressenLigplaats should render \`Nee\` if indicatie geconstateerd is \`false\` and show a red bullet 1`] = `
<MapDetailResultWrapper
  onMaximize={[MockFunction]}
  onPanoPreviewClick={[MockFunction]}
  panoUrl="panoUrl"
  subTitle="Ligplaats label"
  title="Adres (ligplaats)"
>
  <ul
    className="map-detail-result__list"
  >
    <li
      className="map-detail-result__notification"
    >
      <Notification
        canClose={false}
        className=""
        level="alert"
      >
        In onderzoek
      </Notification>
    </li>
    <MapDetailResultStatusItem
      label="Indicatie geconstateerd"
      status=""
      value="Nee"
    />
    <MapDetailResultStatusItem
      label="Aanduiding in onderzoek"
      status="alert"
      value="Ja"
    />
  </ul>
</MapDetailResultWrapper>
`;

exports[`MapDetailAdressenLigplaats should render everything 1`] = `
<MapDetailResultWrapper
  onMaximize={[MockFunction]}
  onPanoPreviewClick={[MockFunction]}
  panoUrl="panoUrl"
  subTitle="Ligplaats label"
  title="Adres (ligplaats)"
>
  <ul
    className="map-detail-result__list"
  >
    <li
      className="map-detail-result__notification"
    >
      <Notification
        canClose={false}
        className=""
        level="alert"
      >
        Indicatie geconstateerd
      </Notification>
    </li>
    <li
      className="map-detail-result__notification"
    >
      <Notification
        canClose={false}
        className=""
        level="alert"
      >
        In onderzoek
      </Notification>
    </li>
    <MapDetailResultStatusItem
      label="Indicatie geconstateerd"
      status="alert"
      value="Ja"
    />
    <MapDetailResultStatusItem
      label="Aanduiding in onderzoek"
      status="alert"
      value="Ja"
    />
  </ul>
</MapDetailResultWrapper>
`;
